--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
   <title>FusionPixel</title>
 </head>
 
+<style>
+  html {
+    scroll-behavior: smooth;
+  }
+</style>
+
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
