--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cinzel:wght@400..900&family=Fira+Code:wght@300..700&family=Protest+Revolution&family=Raleway:ital,wght@0,100..900;1,100..900&family=VT323&display=swap"
     rel="stylesheet">
-  <title>FusionPixel</title>
+  <title>fusionpixel</title>
+  <meta name="description" content="Welcome to a world where your imagination takes center stage! At Fushin Pixel Labs, we’re not just a service provider; we’re your creative partner, committed to bringing your ideas to life with unmatched precision and care. Our mission is simple: to empower you to create a website or design that’s truly yours—crafted entirely by skilled hands, not by AI.">
 </head>
 
 <style>
